[package]
name = "rustls"
version = "0.16.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.4", optional = true }
ring = "0.16.5"
untrusted = { version = "0.7.0", optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
sgx_types = { version = "1.0", optional = true }
memoffset = { version = "0.5", optional = true }

[dependencies.webpki]
git = "https://github.com/mesalock-linux/webpki"
tag = "v1.1.0"
default-features = false
features = ["std", "trust_anchor_util"]

[dependencies.sct]
git = "https://github.com/mesalock-linux/sct.rs"
tag = "v1.1.0"
default-features = false

[features]
default=["logging", "aesgcm", "chachapoly", "tls13", "x25519", "ecdh", "ecdsa"]
logging = ["log"]
dangerous_configuration = []
aesgcm = []
chachapoly = []
tls13 = []
x25519 = []
ecdh = []
ecdsa = ["sct/ecdsa"]
quic = []
sgx = ["dangerous_configuration", "untrusted", "serde_json", "chrono", "sgx_types", "memoffset"]

[dev-dependencies]
env_logger = "0.6"
log = "0.4"
tempfile = "3.0"
webpki-roots = "0.17.0"
criterion = "0.2.11"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false
